--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.5",
     "@tanstack/react-table": "^8.17.3",
+    "antd": "^5.19.0",
+    "flowbite-react": "^0.10.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
