--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "flowbite-react": "^0.10.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20",
