--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.5",
+    "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-table": "^8.17.3",
     "antd": "^5.19.0",
     "flowbite-react": "^0.10.1",
