--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "dbwm",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@ant-design/nextjs-registry": "^1.0.0",
-    "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.43.5",
-    "antd": "^5.19.0",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "recharts": "^2.12.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "dbwm",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"predev": "ts-node --project ./tsconfig.node.json ./scripts/genAntdCss.mjs",
+		"prebuild": "cross-env NODE_ENV=production ts-node --project ./tsconfig.node.json ./scripts/genAntdCss.mjs"
+	},
+	"dependencies": {
+		"@ant-design/nextjs-registry": "^1.0.0",
+		"@ant-design/static-style-extract": "^1.0.2",
+		"@supabase/ssr": "^0.3.0",
+		"@supabase/supabase-js": "^2.43.5",
+		"antd": "^5.19.0",
+		"next": "14.2.4",
+		"react": "^18",
+		"react-dom": "^18",
+		"recharts": "^2.12.7"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"cross-env": "^7.0.3",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.4",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"ts-node": "^10.9.2",
+		"tslib": "^2.6.3",
+		"typescript": "^5"
+	}
 }
