--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.5",
     "antd": "^5.19.0",
+    "apexcharts": "^3.52.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "recharts": "^2.12.7"
   },
