--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dbwm",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,25 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/nextjs-registry": "^1.0.0",
-    "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.43.5",
-    "antd": "^5.19.0",
+    "@ant-design/icons": "^5.4.0",
+    "@ant-design/nextjs-registry": "^1.0.1",
+    "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "^2.45.1",
+    "antd": "^5.20.0",
     "apexcharts": "^3.52.0",
-    "next": "14.2.4",
+    "next": "14.2.5",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5"
   }
 }
