--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18",
-    "recharts": "^2.12.7"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^22",
