--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.45.1",
     "antd": "^5.20.0",
     "apexcharts": "^3.52.0",
+    "dayjs": "^1.11.12",
     "next": "14.2.5",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
